--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,16 @@
 /.pnp
 .pnp.js
 .env
+
 # testing
 /coverage
 
 # production
 /build
+
+#firebase
+firebase.js
+chatNode.json
 
 # misc
 .DS_Store
